--- a/src/components/CharacterStepsTotal/CharacterStepsTotal.css
+++ b/src/components/CharacterStepsTotal/CharacterStepsTotal.css
@@ -470,3 +470,81 @@
 .character-steps-total-popup-btn-wrap button {
     cursor: pointer;
 }
+.character-steps-total-char-description-result-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.character-steps-total-edit-description-btn::before {
+    content: '\1F589';
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    cursor: pointer;
+}
+.character-steps-total-char-description-content,
+.character-steps-total-char-description-content p {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 95%;
+}
+.character-steps-total-char-description-content p {
+    text-align: left;
+    line-height: 1.2em;
+    padding: 10px;
+}
+.character-steps-total-image-popup-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: absolute;
+    z-index: 5;
+    min-height: 400px;
+    background-color: gray;
+    padding: 20px;
+}
+.character-steps-total-image-popup-title {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 20px;
+    justify-content: center;
+}
+.character-steps-total-image-popup-upload-btn-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+}
+.character-steps-total-image-popup-preview {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-height: 300px;
+    min-width: 300px;
+    border: 1px solid;
+    margin-bottom: 20px;
+}
+.character-steps-total-image-popup-preview img {
+    max-width: 300px;
+}
+.character-steps-total-image-popup-controls {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.character-steps-total-image-btn {
+    margin-right: 10px;
+}
+.character-steps-total-image-btn button {
+    cursor: pointer;
+}
