--- a/src/components/CharacterStepsTotal/CharacterStepsTotal.css
+++ b/src/components/CharacterStepsTotal/CharacterStepsTotal.css
@@ -249,6 +249,7 @@
     flex-wrap: wrap;
     max-width: 14%;
     margin-right: 10px;
+    padding: 10px;
     border: 1px solid;
 }
 .character-total-savethrows-wrap {
@@ -310,6 +311,7 @@
     flex-wrap: wrap;
     margin-right: 5px;
     align-items: center;
+    margin-bottom: 5px;
 }
 .magical-attack-param-value,
 .physical-attack-param-value {
@@ -383,15 +385,15 @@
     margin-bottom: 5px;
 }
 .character-total-stat-ability-name {
-    margin-right: 10px;
-    width: 80%;
+    width: 88%;
     justify-content: flex-start;
+    text-align: left;
     display: flex;
 }
 .character-total-stat-ability-value {
     display: flex;
     justify-content: flex-end;
-    max-width: 20%;
+    max-width: 14%;
 }
 .character-steps-total-avatar-wrap {
     display: flex;
