--- a/src/components/CharacterStepsTotal/CharacterStepsTotal.css
+++ b/src/components/CharacterStepsTotal/CharacterStepsTotal.css
@@ -200,6 +200,7 @@
     width: 100%;
     border: 1px solid;
     margin-bottom: 5px;
+    padding: 5px;
 }
 .character-inventory-gold-row {
     display: flex;
