--- a/src/components/CharacterStepsPreview/CharacterStepsPreview.css
+++ b/src/components/CharacterStepsPreview/CharacterStepsPreview.css
@@ -359,12 +359,15 @@
     padding-right: 10px;
     padding-left: 10px;
 }
-.character-steps-total-stats-test-wrap {
+.character-steps-total-stats-test-wrap,
+.character-steps-total-abilities-test-wrap,
+.character-steps-total-attack-test-wrap {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
     position: relative;
+    margin-bottom: 20px;
 }
 .character-steps-total-stat-item-row,
 .character-steps-total-ability-item-row,
@@ -531,10 +534,6 @@
     top: 100%;
     margin-bottom: 20px;
 }
-.character-steps-total-abilities-test-wrap,
-.character-steps-total-attack-test-wrap {
-    margin-top: 40px;
-}
 .character-steps-total-abilities-item-row {
     margin-bottom: 10px;
 }
@@ -573,7 +572,7 @@
     align-items: center;
     margin-bottom: 20px;
 }
-.character-steps-total-attack-item{
+.character-steps-total-attack-item {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -582,6 +581,10 @@
     max-width: 300px;
     border: 1px solid;
     margin-right: 5px;
+    font-size: 14px;
+}
+.character-steps-total-attack-item-spell {
+    max-width: 22%;
 }
 .character-steps-total-attack-item select{
     display: flex;
@@ -628,7 +631,8 @@
 .character-steps-total-attack-penalty-wrap {
     display: flex;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
     justify-content: center;
 }
 .attack-penalty-title {
@@ -652,4 +656,45 @@
     position: absolute;
     top: -6px;
     left: 2px;
+}
+.character-steps-total-attack-spell-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.character-steps-total-attack-spell-target-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.character-steps-total-attack-spell-target-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    max-width: 300px;
+    border: 1px solid;
+    margin-right: 5px;
+    font-size: 14px;
+}
+.character-steps-total-attack-spell-target-item label {
+    max-width: 50%;
+}
+.character-steps-total-attack-spell-target-item input {
+    max-width: 50%;
+}
+.character-steps-total-attack-spell-target-item select {
+    width: 100%;
+    border: none;
+}
+.character-steps-total-attack-spell-target-title {
+    margin-bottom: 10px;
 }
