--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -319,6 +319,107 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    max-width: 48%;
+    min-width: 45%;
+    min-height: 98vh;
+    margin-left: 10px;
+    border: 1px solid;
+}
+.user-character-preview-avatar-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
+}
+.user-character-preview {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.user-character-preview-image-wrap {
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
+    min-height: 300px;
+    max-width: 40%;
+    max-height: 40%;
+    border: 1px solid;
+    margin-right: 10px;
+    margin-bottom: 20px;
+}
+.user-character-preview-stats-wrap {
+    display: flex;
+    flex-direction: column;
+    max-width: 60%;
+    width: 40%;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.user-character-preview-stat-item-row {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.user-character-preview-stat-name,
+.user-character-preview-stat-value {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
     max-width: 50%;
-    min-width: 40%;
+}
+.user-character-preview-stat-name {
+    margin-right: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 50%;
+}
+.user-character-preview-name-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.user-character-preview-name,
+.user-character-preview-class,
+.user-character-preview-class-lvl,
+.user-character-preview-exp {
+    margin-bottom: 10px;
+}
+.user-character-preview-class-lvl,
+.user-character-exp-total {
+    padding-left: 5px;
+}
+.user-character-preview-abilities-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.user-character-preview-abilities-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+}
+.user-character-preview-abilitiy-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 20%;
+    width: 15%;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border: 1px solid;
 }
