--- a/src/components/CharacterStepsInfo/CharacterStepsInfo.css
+++ b/src/components/CharacterStepsInfo/CharacterStepsInfo.css
@@ -53,7 +53,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-items: end;
+    align-items: flex-end;
     width: 40%;
     position: relative;
     margin-right: 10px;
