--- a/src/components/CharacterStepsPreview/CharacterStepsPreview.css
+++ b/src/components/CharacterStepsPreview/CharacterStepsPreview.css
@@ -38,9 +38,6 @@
     width: 100%;
     flex-wrap: wrap;
 }
-.skill-short-desc {
-
-}
 .skill-item-link {
     padding-left: 5px;
 }
@@ -139,8 +136,48 @@
     text-align: left;
     justify-content: left;
 }
+.character-race-preview-age {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    position: relative;
+}
+.character-race-preview-age span {
+    align-items: center;
+    margin-right: 5px;
+}
 .character-race-preview-span-title {
-    margin-bottom: 5px;
+    margin-right: 5px;
+}
+.character-race-edit-age-btn::before {
+    margin: 0;
+    position: absolute;
+    left: 10%;
+    top: -100%;
+    font-size: 14px;
+    content: '\1F589';
+    cursor: pointer;
+}
+.character-race-age-add-value-input-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    min-width: 50px;
+    min-height: 50px;
+    background-color: gray;
+    padding: 10px;
+    border: 1px solid;
+}
+.character-race-age-add-value-input-wrap input {
+    border: 1px solid;
+    max-width: 50px;
+    margin-left: 10px;
+}
+.age-edit-controls button {
+    margin: 0 2px;
+    cursor: pointer;
 }
 
 .race-description-wrap {
